--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -3,6 +3,7 @@
 // import abstracts
 @import "./abstracts/variables";
 @import "./abstracts/mixins";
+@import "./abstracts/animation";
 
 // import utils
 @import "./utils/utils";
