--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -6,26 +6,22 @@
   overflow-x: hidden;
 }
 
-@mixin flexCenter {
+@mixin flex($items, $justify, $direction) {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-@mixin flexVertical {
-  display: flex;
-  align-items: center;
-}
-
-@mixin responsive($width) {
-  @media (max-width: $width) {
-    @content;
-  }
-}
-@mixin flex($direction, $items, $justify) {
-  display: flex;
-  flex-direction: $direction;
   align-items: $items;
   justify-content: $justify;
+  flex-direction: $direction;
 }
+// @include flex(center, center, null);
 
-// @include flex(row, center, center);
+@mixin Transition($time) {
+  transition: all $time ease;
+  -moz-transition: all $time ease;
+  -webkit-transition: all $time ease;
+  -ms-transition: all $time ease;
+  -o-transition: all $time ease;
+}
