--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -1,6 +1,6 @@
 .blog {
   padding-bottom: 60px;
-  background-color: #f3f3f4;
+  background-color: $white334;
   .heading_tab {
     text-align: center;
   }
@@ -8,7 +8,7 @@
     margin-bottom: 30px;
     display: inline-block;
     background-color: $white;
-    box-shadow: 0 9px 30px 0 #00000026;
+    box-shadow: 0 9px 30px 0 $gray;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
@@ -54,7 +54,7 @@
             }
             a {
               font-size: 14px;
-              color: #354463;
+              color: $desc-color;
               font-weight: 600;
               text-transform: capitalize;
               svg {
@@ -72,22 +72,21 @@
             font-size: 24px;
             font-weight: 600;
             text-transform: capitalize;
-            color: #354463;
+            color: $desc-color;
             letter-spacing: -0.6px;
+            font-family: var(--font_rr);
           }
           .btn_link {
             font-size: 13px;
             text-transform: uppercase;
             font-weight: 600;
-            color: #565656;
+            color: $btn-color;
             span {
               width: 50px;
               height: 50px;
-              border: 1px solid #ddd;
+              border: 1px solid $gray;
               border-radius: 100%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
+              @include flex(center, center, null);
               transition: all 0.3s ease;
               &:hover {
                 background-color: $aqua;
