--- a/src/sass/components/_service.scss
+++ b/src/sass/components/_service.scss
@@ -23,12 +23,8 @@
       text-align: center;
       padding: 50px 30px 80px;
       border-radius: 0px 0px 15px 0px;
-      transition: all 500ms ease;
-      -moz-transition: all 500ms ease;
-      -webkit-transition: all 500ms ease;
-      -ms-transition: all 500ms ease;
-      -o-transition: all 500ms ease;
-      box-shadow: 0 0 10px #00000012;
+      @include Transition(500ms);
+      box-shadow: 0 0 10px $lightgray;
       &:hover::before {
         opacity: 1;
         border-radius: 0px 0px 0px 15px;
@@ -61,44 +57,31 @@
         margin-left: -50px;
         border-radius: 0px 0px 15px 0px;
         background-color: $aqua;
-        transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -webkit-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
+        @include Transition(500ms);
       }
       .text {
         position: relative;
         line-height: 24px;
-        transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -webkit-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
+        @include Transition(500ms);
+        font-family: var(--font_rm);
       }
       h5 {
         margin-top: 22px;
         margin-bottom: 18px;
         a {
+          font-family: var(--font_rr);
           position: relative;
-          color: #534db8;
-          transition: all 500ms ease;
-          -moz-transition: all 500ms ease;
-          -webkit-transition: all 500ms ease;
-          -ms-transition: all 500ms ease;
-          -o-transition: all 500ms ease;
+          color: $desc-color;
+          font-weight: 600;
+          @include Transition(500ms);
         }
       }
       .icon-box {
         position: relative;
-        color: #000000;
+        color: $black;
         font-size: 60px;
         line-height: 1em;
-        transition: all 500ms ease;
-        -moz-transition: all 500ms ease;
-        -webkit-transition: all 500ms ease;
-        -ms-transition: all 500ms ease;
-        -o-transition: all 500ms ease;
+        @include Transition(500ms);
         .icon {
           position: relative;
           color: $aqua;
@@ -112,8 +95,8 @@
         right: 0px;
         bottom: 0px;
         opacity: 0;
-        transition: all 500ms ease;
-        background: linear-gradient(to right, #0083b0, #00b4db);
+        @include Transition(500ms);
+        background: linear-gradient(to right, $aquapuar, $aquapuar);
       }
     }
   }
@@ -125,7 +108,7 @@
       bottom: 10%;
       width: 120px;
       height: 120px;
-      border: 5px solid #00b4db;
+      border: 5px solid $aquapuar;
       border-radius: 100%;
       opacity: 0.3;
       animation: float_up_down 5s linear infinite;
@@ -136,7 +119,7 @@
       top: 0;
       width: 80px;
       height: 100px;
-      border: 5px solid #00b4db;
+      border: 5px solid $aquapuar;
       animation: rotateme 10s linear infinite;
       opacity: 0.3;
     }
@@ -146,7 +129,7 @@
       bottom: 15%;
       width: 170px;
       height: 170px;
-      border: 5px solid #00b4db;
+      border: 5px solid $aquapuar;
       border-radius: 100%;
       opacity: 0.3;
       animation: float_up_down 5s linear infinite;
