--- a/src/sass/components/_thank-you.scss
+++ b/src/sass/components/_thank-you.scss
@@ -2,10 +2,10 @@
   width: 100%;
   margin-top: 80px;
   .thank_you_tab {
-    background: linear-gradient(to right, #0083b0, #00b4db);
+    background: linear-gradient(to right, $aquapuar, $aquapuar);
     padding: 30px;
     text-align: center;
-    box-shadow: 0 10px 16px 1px rgba(174, 199, 251, 1);
+    box-shadow: 0 10px 16px 1px $shadow;
     border-radius: 5px;
     .thank-content {
       padding-bottom: 20px;
