--- a/src/sass/dashborad/_rightsidebar.scss
+++ b/src/sass/dashborad/_rightsidebar.scss
@@ -9,7 +9,7 @@
   position: relative;
   transition: 0.5s;
   background-color: $white;
-  box-shadow: 0px 4px 40px #00000012;
+  box-shadow: 0px 4px 40px $lightgray;
   .header_iner {
     @include flex(row, center, space-between);
     background-color: $white;
