--- a/src/sass/pages/career/_career-details.scss
+++ b/src/sass/pages/career/_career-details.scss
@@ -16,7 +16,7 @@
         height: 100px;
         border-radius: 6px;
         padding: 10px;
-        border: 3px solid #ddd;
+        border: 3px solid $gray;
       }
     }
 
@@ -26,9 +26,15 @@
         display: inline;
         vertical-align: middle;
         margin-right: 10px;
+        font-weight: 600;
+        font-family: var(--font_rr);
       }
       span {
         line-height: 28px;
+        font-family: var(--font_rr);
+        strong {
+          font-weight: 600;
+        }
       }
       .full_time {
         background: $aqua;
@@ -48,22 +54,29 @@
     background: $aqua;
     color: $white !important;
     border: 0;
+    span {
+      font-weight: 400;
+      font-family: var(--font_rr);
+    }
   }
   .detail_description {
     h5 {
       font-size: 18px;
-      background: #f5f6f7;
+      background: $white567;
       padding: 8px 15px;
       margin-bottom: 16px;
       line-height: 1.6;
       border-radius: 2px;
       border-left: 3px solid $aqua;
+      font-weight: 500;
+      font-family: var(--font_rm);
     }
     ul li,
     p {
       line-height: 28px;
-      color: #25395c;
+      color: $desc-color;
       padding-left: 0 !important;
+      font-family: var(--font_rr);
     }
     i {
       margin-right: 8px;
@@ -76,26 +89,29 @@
     border-radius: 6px;
     background: $white;
     overflow: hidden;
-    box-shadow: 0px 0px 10px 2px #0000001a;
+    box-shadow: 0px 0px 10px 2px $lightblack;
     &_header {
-      border-bottom: 1px solid #e0dfe6;
+      border-bottom: 1px solid $lightwhite;
       margin-bottom: 30px;
       h6 {
         margin-bottom: 10px;
         font-size: 26px;
         font-weight: 600;
         color: $aqua;
+        font-weight: 600;
+        font-family: var(--font_rr);
       }
     }
     .btn-gray {
       width: 100%;
     }
     .form-group {
-      .label {
-        font-weight: 600;
+      label {
+        font-weight: 500;
+        font-family: var(--font_rr);
       }
       .form-control {
-        background-color: #f5f6f7;
+        background-color: $white567;
         border: 1px solid #dde6ef !important;
         &:focus {
           box-shadow: none;
