--- a/src/sass/pages/career/_open-position.scss
+++ b/src/sass/pages/career/_open-position.scss
@@ -22,6 +22,13 @@
         margin: 0px;
         padding-bottom: 10px;
         font-size: 18px;
+        font-family: var(--font_rm);
+      }
+      p {
+        span {
+          font-family: var(--font_rr);
+          margin-right: 10px;
+        }
       }
     }
     .apply-now-btn {
