--- a/src/sass/pages/career/_working.scss
+++ b/src/sass/pages/career/_working.scss
@@ -7,7 +7,7 @@
     color: $black;
     text-align: center;
     margin-bottom: 20px;
-    text-transform: uppercase;
+    font-family: var(--font_kr) !important;
     letter-spacing: 2px;
   }
   .working-tab {
@@ -15,11 +15,10 @@
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     .column {
-      display: flex;
-      align-items: center;
+      @include flex(center, null, null);
       padding: 30px 20px;
       background: $white;
-      box-shadow: 0px 0px 25px 0px #00000012;
+      box-shadow: 0px 0px 25px 0px $lightgray;
       transition: all 0.4s ease;
       .icon,
       .content {
@@ -41,11 +40,13 @@
         margin: 0px 0px 10px 0px;
         color: $aqua;
         font-weight: 500;
+        font-family: var(--font_rm);
       }
       p {
         font-size: 16px;
-        font-weight: 500;
+        font-weight: 400;
         max-width: 400px;
+        font-family: var(--font_rr);
       }
     }
   }
