--- a/src/sass/utils/_utils.scss
+++ b/src/sass/utils/_utils.scss
@@ -1,7 +1,6 @@
 .pl-15 {
   padding-left: 15px;
 }
-
 .mt-60 {
   margin-top: 60px;
 }
@@ -31,6 +30,7 @@ h6 {
 p {
   font-size: 16px;
   line-height: 26px;
+  font-family: var(--font_rr);
 }
 
 /* Heading */
@@ -38,36 +38,31 @@ p {
   position: relative;
   margin: auto auto 40px;
   max-width: 450px;
+  &:after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  .heading {
+    position: relative;
+    text-transform: capitalize;
+    font-family: var(--font_rr);
+    font-weight: 600;
+  }
+  .sub_heading {
+    color: $aqua;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: var(--font_rm);
+  }
 }
-.heading_tab:after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.heading {
-  position: relative;
-  text-transform: capitalize;
-  font-family: "Roboto", sans-serif;
-  font-weight: 600;
-}
-.heading_tab .sub_heading {
-  color: $aqua;
-  font-size: 18px;
-  font-weight: 600;
-}
-.heading .heading {
-  font-weight: 600;
-  line-height: 1;
-  font-size: 30px;
-  font-weight: 900;
-}
-
 .blue_btn {
   padding: 10px 32px;
   color: $white;
   border-radius: 50px 0px 50px 0px;
   background-color: $aqua;
+  font-family: var(--font_rr);
+  font-family: var(--font_rr);
   transition: all 0.5s ease 0ms;
   border: 1px solid transparent;
   &:hover {
@@ -76,57 +71,24 @@ p {
     background-color: transparent;
   }
 }
-
-ul {
-  list-style: none;
-}
-
-a,
-a:hover {
-  text-decoration: none !important;
-}
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-}
-@keyframes float_up_down {
-  0%,
-  100% {
-    transform: translateY(10px);
-  }
-  50% {
-    transform: translateY(-10px);
+.btn-gray {
+  background: $aqua;
+  color: $white;
+  border-color: $aqua;
+  padding: 13px 30px 13px;
+  border-radius: 100px;
+  font-size: 18px;
+  border: solid 2px;
+  transition: all 0.4s ease;
+  text-transform: capitalize;
+  line-height: 1;
+  font-family: var(--font_rm);
+  &:hover {
+    color: $aqua;
+    background: $white;
+    border-color: $aqua;
   }
 }
-
-@keyframes rotateme {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes notify-pulse {
-  0% {
-    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.7);
-  }
-  100% {
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-  }
-}
-
-@keyframes notify-pulse {
-  0% {
-    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.7);
-  }
-  100% {
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-  }
-}
-
 .grid-animation {
   position: absolute;
   left: 0;
@@ -203,23 +165,6 @@ body {
     }
   }
 }
-@-webkit-keyframes topToBottom {
-  0% {
-    top: 0;
-  }
-  to {
-    top: 100%;
-  }
-}
-
-@keyframes topToBottom {
-  0% {
-    top: 0;
-  }
-  to {
-    top: 100%;
-  }
-}
 .section_padding {
   padding: 50px 0;
 }
@@ -244,21 +189,4 @@ body {
   -o-animation-duration: 2s;
   -o-animation-iteration-count: infinite;
   -o-animation-timing-function: linear;
-}
-
-@keyframes up-down {
-  0% {
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
-  }
-
-  50% {
-    -webkit-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
-
-  100% {
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
-  }
 }
