--- a/src/Assets/sass/responsive.scss
+++ b/src/Assets/sass/responsive.scss
@@ -50,6 +50,9 @@
   .testimonial_content {
     margin-bottom: 25px;
   }
+  .left-section .goback {
+    margin-bottom: 20px;
+  }
 }
 @media (max-width: 992px) {
   .home_content {
@@ -226,6 +229,13 @@
     }
   }
   .left-section .heading_tab {
+    margin-bottom: 0;
+  }
+  .scrollbtn button {
+    right: 4%;
+    bottom: 2%;
+  }
+  .main-footer .contact-widget li:last-child {
     margin-bottom: 0;
   }
 }
