--- a/src/Assets/sass/App.scss
+++ b/src/Assets/sass/App.scss
@@ -18,6 +18,7 @@
 @import "./components/footer";
 @import "./components/testimonial";
 @import "./components/InnerBanner";
+@import "./components/preloader";
 
 // import Pages
 
@@ -30,8 +31,8 @@
 @import "./components/thank-you";
 @import "./pages/blog/blog-details";
 @import "./pages/blog/blogRight";
+@import "./components//scroll-button";
 
 // import Pages
-
 @import "./dashborad/leftheader";
 @import "./dashborad/rightsidebar";
