--- a/src/Assets/sass/components/_home.scss
+++ b/src/Assets/sass/components/_home.scss
@@ -29,7 +29,8 @@
       font-size: 20px;
       margin: 20px 0;
       line-height: 28px;
-      font-family: var(--font_rm);
+      letter-spacing: 1px;
+      font-family: var(--font_kr);
     }
   }
   &_img {
