--- a/src/Assets/sass/pages/_about.scss
+++ b/src/Assets/sass/pages/_about.scss
@@ -1,6 +1,8 @@
 #about {
   .sec-title .heading_tab {
     margin-left: 0;
+    max-width: 100%;
+    margin-bottom: 20px;
   }
   .text {
     font-size: 15px;
