--- a/src/Assets/sass/dashborad/_rightsidebar.scss
+++ b/src/Assets/sass/dashborad/_rightsidebar.scss
@@ -7,7 +7,7 @@
 .dheader {
   width: 100%;
   position: relative;
-  transition: 0.5s;
+  @include Transition(0.5s);
   background-color: $white;
   box-shadow: 0px 4px 40px $lightgray;
   .header_iner {
@@ -101,10 +101,10 @@
     right: 0;
     width: 350px;
     transform: translateY(30px) translateX(20px);
-    transition: 0.3s;
+    @include Transition(0.3s);
     opacity: 0;
     visibility: hidden;
-    transition: 0.3s;
+    @include Transition(0.3s);
     &.active {
       opacity: 1;
       visibility: visible;
@@ -177,8 +177,7 @@
         font-weight: 500;
         border-radius: 5px;
         white-space: nowrap;
-        -webkit-transition: 0.5s;
-        transition: 0.5s;
+        @include Transition(0.5s);
       }
     }
   }
@@ -202,8 +201,7 @@
       opacity: 0;
       visibility: hidden;
       top: 77px;
-      -webkit-transition: 0.5s;
-      transition: 0.5s;
+      @include Transition(0.5s);
       -webkit-border-radius: 15px;
       -moz-border-radius: 15px;
       border-radius: 15px;
