--- a/src/Assets/sass/pages/_contact.scss
+++ b/src/Assets/sass/pages/_contact.scss
@@ -86,7 +86,7 @@
         background-color: $white;
         border-radius: 5px;
         border: 1px solid transparent;
-        transition: all 0.4s ease;
+        @include Transition(0.4s);
         &:hover {
           border-color: $lightwhite;
           background-color: $lightwhite;
