--- a/src/Assets/sass/components/_comment.scss
+++ b/src/Assets/sass/components/_comment.scss
@@ -79,7 +79,7 @@ font-family: var(--font_rr);
                     font-size: 14px;
                     font-weight: 600;
                     padding: 5px 20px;
-                    transition: all 0.3s ease;
+                    @include Transition(0.3s);
                     font-family: var(--font_rr);
                     &:hover {
                         background-color: $aquadark;
