--- a/src/Assets/sass/dashborad/_leftheader.scss
+++ b/src/Assets/sass/dashborad/_leftheader.scss
@@ -64,7 +64,7 @@
             border-radius: 10px;
             padding: 5px 10px;
             background: $white;
-            transition: all 0.5s ease;
+            @include Transition(0.5s);
             &:hover,
             &.active {
               background: $aqua;
