--- a/src/Assets/sass/pages/blog/_blog-details.scss
+++ b/src/Assets/sass/pages/blog/_blog-details.scss
@@ -7,7 +7,7 @@
   .user-tab {
     padding: 20px 0;
     .card {
-      transition: all 0.4s ease;
+      @include Transition(0.4s);
       @include flex(center, null, row);
       &:hover {
         background-color: $aqua;
@@ -82,49 +82,167 @@
   }
 }
 
-.blog {
-  .pagination {
-    margin: 0;
-    justify-content: center;
-    li {
-      &:not(:last-child) {
-        margin-right: 8px;
+.blog-details {
+  .blog_left_sec {
+    .card {
+      border: 0;
+      box-shadow: 0 5px 40px 10px $shadow;
+      .card-title {
+        color: $blue;
+        font-size: 30px;
+        font-family: var(--font_kr);
+        font-weight: 600;
       }
-      &:hover,
-      &.active {
-        opacity: 1;
-        .page-link {
-          background-color: $aqua !important;
-          color: $white;
+      .card-text {
+        color: $desc-color;
+      }
+      &_second {
+        padding: 20px 0;
+        h3 {
+          font-size: 20px;
+          font-family: var(--font_rm);
+          font-weight: 500;
+          margin-bottom: 15px;
+        }
+        .image img {
+          width: 100%;
+          height: 100%;
+        }
+        .content {
+          .technologies-features {
+            span {
+              display: block;
+              width: 100%;
+            }
+          }
         }
       }
-      &.disabled {
-        opacity: 0.7;
+    }
+  }
+  .technologies-features {
+    span {
+      padding-left: 18px !important;
+      position: relative;
+      display: inline-block;
+      width: 33.33%;
+      margin-bottom: 15px;
+      @include Transition(0.4s);
+      &:hover {
+        color: $aqua;
       }
-      span {
-        font-family: var(--font_rr);
-        font-weight: 500;
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 30%;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: $aqua;
       }
-      .page-link,
-      a {
-        display: block;
-        padding: 5px 20px;
-        min-width: 45px;
-        border-radius: 5px;
-        border: 1px solid rgb(204, 204, 204);
-        color: $black;
-        font-family: var(--font_rr);
-        font-weight: 500;
-        background-color: transparent;
-        text-align: center;
-        font-size: 16px;
-        &:focus {
-          box-shadow: none;
+    }
+  }
+  .blog_img {
+    width: 50%;
+    margin: 0 auto;
+  }
+  .services-contact-info {
+    background-color: $white;
+    box-shadow: 0 5px 40px 10px $shadow;
+    margin-top: 10px;
+    .card {
+      border: 0;
+      padding: 30px;
+    }
+    h3 {
+      margin-bottom: 25px;
+      font-size: 24px;
+      font-family: var(--font_rm);
+      font-weight: 500;
+    }
+    ul {
+      padding: 0;
+      li {
+        margin-bottom: 20px;
+        border-bottom: 1px dotted $form-input;
+        position: relative;
+        color: #6b6b84;
+        font-weight: 600;
+        font-size: 16.5px;
+        padding-left: 35px;
+        padding-bottom: 20px;
+        .icon {
+          position: absolute;
+          left: 0;
+          top: 3px;
+          color: $aqua;
+          font-weight: 400;
+          font-size: 25px;
         }
-        .sr-only {
-          display: none;
+        span {
+          color: $desc-color;
+          display: block;
+          margin-bottom: 8px;
+          font-size: 18px;
+          font-family: var(--font_rr);
+          font-weight: 600;
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+        div,
+        a {
+          font-weight: 500;
+          color: $desc-color;
         }
       }
     }
   }
 }
+
+// .blog {
+//   .pagination {
+//     margin: 0;
+//     justify-content: center;
+//     li {
+//       &:not(:last-child) {
+//         margin-right: 8px;
+//       }
+//       &:hover,
+//       &.active {
+//         opacity: 1;
+//         .page-link {
+//           background-color: $aqua !important;
+//           color: $white;
+//         }
+//       }
+//       &.disabled {
+//         opacity: 0.7;
+//       }
+//       span {
+//         font-family: var(--font_rr);
+//         font-weight: 500;
+//       }
+//       .page-link,
+//       a {
+//         display: block;
+//         padding: 5px 20px;
+//         min-width: 45px;
+//         border-radius: 5px;
+//         border: 1px solid rgb(204, 204, 204);
+//         color: $black;
+//         font-family: var(--font_rr);
+//         font-weight: 500;
+//         background-color: transparent;
+//         text-align: center;
+//         font-size: 16px;
+//         &:focus {
+//           box-shadow: none;
+//         }
+//         .sr-only {
+//           display: none;
+//         }
+//       }
+//     }
+//   }
+// }
