--- a/src/Assets/sass/pages/career/_working.scss
+++ b/src/Assets/sass/pages/career/_working.scss
@@ -19,14 +19,14 @@
       padding: 30px 20px;
       background: $white;
       box-shadow: 0px 0px 25px 0px $lightgray;
-      transition: all 0.4s ease;
+      @include Transition(0.4s);
       .icon,
       .content {
         padding: 0 10px;
       }
       &:hover {
         transform: translate(0px, -10px);
-        transition: all 0.4s ease;
+        @include Transition(0.4s);
       }
       .icon img {
         margin-right: 30px;
