--- a/src/Assets/sass/utils/_utils.scss
+++ b/src/Assets/sass/utils/_utils.scss
@@ -53,7 +53,13 @@ p {
     color: $aqua;
     font-size: 18px;
     font-weight: 500;
-    font-family: var(--font_rm);
+    font-family: var(--font_kr);  }
+  a{
+    @include Transition(0.4s);
+    &:hover{
+.sub_heading{
+  color: $desc-color;
+}}
   }
 }
 .blue_btn {
@@ -63,7 +69,7 @@ p {
   background-color: $aqua;
   font-family: var(--font_rr);
   font-family: var(--font_rr);
-  transition: all 0.5s ease 0ms;
+  @include Transition(0.5s);
   border: 1px solid transparent;
   &:hover {
     border: 1px solid $aqua;
@@ -79,7 +85,7 @@ p {
   border-radius: 100px;
   font-size: 18px;
   border: solid 2px;
-  transition: all 0.4s ease;
+  @include Transition(0.4s);
   text-transform: capitalize;
   line-height: 1;
   font-family: var(--font_rm);
