--- a/src/Assets/sass/App.scss
+++ b/src/Assets/sass/App.scss
@@ -77,5 +77,8 @@
 @import "./pages/blog/blogRight";
 
 // import Pages
-@import "./dashborad/leftheader";
-@import "./dashborad/rightsidebar";
+@import "./admin/admin";
+@import "./admin/header";
+@import "./admin/leftheader";
+@import "./admin/rightsidebar";
+@import "./admin/addpost";
