--- a/src/Assets/sass/components/_header.scss
+++ b/src/Assets/sass/components/_header.scss
@@ -13,7 +13,9 @@
       color: $white;
       font-family: var(--font_rm);
       font-size: 15px;
+      a,
       span {
+       color: $white;
         font-family: var(--font_rr);
       }
       &:nth-last-child(1) {
