--- a/src/Assets/sass/components/_home_card.scss
+++ b/src/Assets/sass/components/_home_card.scss
@@ -9,6 +9,7 @@
     background-color: $white;
     border-radius: 5px;
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+    cursor: pointer;
     &:hover {
       background-color: $aqua;
       color: $white;
@@ -55,7 +56,7 @@
         overflow: hidden;
       }
     }
-    button {
+    a {
       position: absolute;
       bottom: -24px;
       border-radius: 100%;
@@ -63,7 +64,7 @@
       color: $btn-color;
       border: 1px solid #e8e8e8;
       width: 50px;
-      height: 50px;
+      height: 50px;@include flex(center, center, null);
      }
   }
 }
