--- a/src/Assets/sass/pages/blog/_blog-details.scss
+++ b/src/Assets/sass/pages/blog/_blog-details.scss
@@ -162,6 +162,7 @@
     }
     ul {
       padding: 0;
+      margin: 0;
       li {
         margin-bottom: 20px;
         border-bottom: 1px dotted $form-input;
@@ -171,6 +172,9 @@
         font-size: 16.5px;
         padding-left: 35px;
         padding-bottom: 20px;
+        &:last-child{
+          margin-bottom: 0;
+        }
         .icon {
           position: absolute;
           left: 0;
